# projets4-rust-finder

./: README.md  index.html  script.js
Site/: A-propos-de-nous.css  A-propos-de-nous.html  Documents.css  Documents.html  index.css  index.html  nicepage.css
UI_FileEx/: Cargo.toml
UI_FileEx/src/: main.rs  main2.rs
file_manager/: Cargo.toml
file_manager/src/: lib.rs  main.rs  main2.rs
file_manager/src/files/: display_files.rs  mod.rs  my_functions.rs
file_manager/src/gui/: gui.rs
file_manager/src/research/: find.rs  search.rs  search1.rs
website/: index.html  script.js  style.css
