[package]
name = "file_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
ignore = "0.4"
jwalk = "0.8"
walkdir = "2.3"
rayon = "1.7"
dirs = "5.0"
colored = "2"
iced = { version = "0.12", features = ["image"] }
rusqlite = { version = "0.29", features = ["bundled"] }
notify = "6.0"
regex = "1.9"
levenshtein = "1.0.5"

